--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "dependencies": {
+    "next": "^15.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT"
-  },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
   }
 }
