--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-
+{
+  "private": true,
+  "workspaces": ["apps/*"],
+  "engines": { "node": "20.x" },
+  "scripts": {
+    "dev": "npm run dev -w apps/web",
+    "build": "npm run build -w apps/web",
+    "start": "npm run start -w apps/web",
+    "heroku-postbuild": "npm run build -w apps/web"
+  }
+}
