--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,12 +1,20 @@
 {
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "next": "^15.5.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT"
+  },
+  "devDependencies": {
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
+    "typescript": "5.9.2"
   }
 }
