--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build -w apps/web"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
