--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build -w apps/web"
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
