--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Dependencies
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Next.js build
 .next
-out
-
-# Env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-apps/web/.env.local
+node_modules
+.env*
+!.env.example
+.idea/
