--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/postcss": "^4.1.12",
@@ -27,6 +29,8 @@
   "devDependencies": {
     "@types/node": "24.3.0",
     "@types/react": "19.1.10",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
     "typescript": "5.9.2"
   }
 }
